--- a/instanttextinserter/hotkey.ini.org
+++ b/instanttextinserter/hotkey.ini.org
@@ -1,8 +1,18 @@
-reload, cs, l
+;バリエーション
+;awcs1つ, 2つ, 3つ, 4つ
+;a-z, 0-9, f1-f12, n0-n9, 方向, その他(convert, capslock, pause)
+reload, cs, r
 open_snippet_folder, cs, s
 open_hotkey_config, cs, h
-version, cs, v
+
+;有効だけどコメントアウト
+;ホットキー自体は登録されないし, エラーダイアログも出ない
+;version, cw, v
+
 ;既に割り当てられたホットキー
+;エラーダイアログが出るはず
 ;version, ca, r
+
 ;無効な設定
+;エラーダイアログは出ない(内部で隠蔽する)
 ;invalid_name, cs, a
